# compliance-advisor

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  api.py  azuredeploy-foundry.bicep  azuredeploy.bicep  azuredeploy.json  compliance_tools.py  env.js  index_knowledge.py  init_db.py  pyproject.toml  requirements.txt  sync.py  verify.py
.azure/: plan.md
.claude/: CLAUDE.md
.claude/agents/: ai-advisor-engineer.md  backend-api-engineer.md  collector-engineer.md  frontend-engineer.md  infrastructure-engineer.md  (+1 more)
.copilot/: mcp.json
.github/: copilot-instructions.md  dependabot.yml
agents/: system_prompt.txt
collector/: auth.py  cli.py  compliance_client.py  config.py  payload.py  submit.py  telemetry.py
dashboard/: app.js  env.js  index.html  staticwebapp.config.json  styles.css
docs/: DATA-SOURCE-PURVIEW.md  M365-GCC-SETUP.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
functions/: function_app.py  requirements.txt
infra/: foundry.bicep  main.bicep  main.tf  outputs.tf  variables.tf
loadtest/: locustfile.py
scripts/: configure_weekly_schedule.py  deploy_flows.py  offboard_tenant.sh  onboard_tenant.sh  seed_frameworks_index.py  setup_search_index.py
sql/: grant_function_app_rbac.sql  schema.sql  schema_sqlite.sql
tests/: conftest.py  requirements-test.txt  test_advisor_decorator.py  test_ai_advisor.py  test_ai_agent.py  test_ai_routes.py  test_auth.py  test_collect_queue.py  test_collect_single.py  test_collect_timer.py  test_compliance_tools.py  test_compute_aggregates.py  test_dashboard_queries.py  test_db_integration.py  test_failure_modes.py  test_federated_auth.py  test_graph_contract.py  test_health_deep.py  test_hunter_ai.py  test_hunter_graph.py  test_hunter_pipeline.py  test_hunter_templates.py  test_ingest_jwt.py  test_logging.py  test_migrations.py  test_payload.py  test_persist.py  test_rate_limit.py  test_register_tenant.py  test_routes_smoke.py  test_validation.py
(+210 files in other folders)
