[project]
name = "compliance-advisor"
version = "2.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "src/functions",
]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.black]
line-length = 120
target-version = ["py310"]
