[project]
name = "compliance-advisor"
version = "0.11.0"
description = "Multi-tenant GCC compliance workload dashboard with AI advisor"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "msal>=1.28",
    "requests>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
compliance-collect = "collector.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
