[project]
name = "compliance-advisor"
version = "1.7.0"
description = "Multi-tenant compliance workload dashboard with AI advisor"
requires-python = ">=3.12"
dependencies = [
    "click~=8.3.0",
    "msal~=1.35.0",
    "requests~=2.32.0",
    "pydantic~=2.12.0",
    "pydantic-settings~=2.13.0",
    "psycopg2-binary~=2.9.11",
    "azure-identity~=1.25.0",
    "openai~=2.26.0",
    "rich~=14.3.0",
]

[tool.setuptools]
packages = ["collector", "collector.hunter"]

[project.scripts]
compliance-collect = "collector.cli:main"
purview-hunt = "collector.hunter.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
target-version = ["py312"]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running PostgreSQL database",
]
